fix styling for different screen sizes to make the main image look fitted on smaller screens. Fixed position of hearts to make them look uniform to the image.

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,8 +8,10 @@ h1, p, h3 {
 }
 
 img {
-    width: 100vh;
+    display: flex;
+    width: 100%;
     height: 75vh;
+    justify-content: center;
 }
 
 .hidden {
@@ -23,7 +25,7 @@ img {
 }
 
 .health-bar {
-    text-align: right;
+   text-align: end;
 }
 
 #input-name {
@@ -38,4 +40,11 @@ img {
     display: flex;
     justify-content: space-evenly;
     box-sizing: content-box;
+}
+
+ @media screen and (max-width: 576px) {
+    img {
+        height: 75%;
+        padding-bottom: 0;
+    }
 }
